--- a/main.css
+++ b/main.css
@@ -1,21 +1,22 @@
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background-color: black;
+    justify-content: center; /* по горизонтали */
+    align-items: center;     /* по вертикали */
+    margin: 0; /* убираем отступы по умолчанию */
+    background-image: linear-gradient(to right, #434343 0%, black 100%);
     font-family: 'Nunito', sans-serif;
 }
 
 .main {
     background-color: hsl(0, 0%, 12%);
-      text-align: center;
-      padding: 20px;
-      border-radius: 20px;
-      width: 320px;
-      height: auto;
-      margin-top: 100px;
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    width: 320px;
+    height: auto;
+    margin-top: 7%;
 }
+
 
 img {
     width: 80px;
