--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+.attribution { 
+font-size: 11px; text-align: center; 
+text-align: center; 
+position: fixed;
+bottom: 5px;
+width: 100%;
+}
+.attribution a { color: hsl(228, 45%, 44%); }
+
 body {
     display: flex;
     justify-content: center; /* по горизонтали */
