--- a/main.css
+++ b/main.css
@@ -1,55 +1,3 @@
-.attribution { 
-font-size: 11px; text-align: center; 
-text-align: center; 
-position: fixed;
-bottom: 5px;
-width: 100%;
-}
-.attribution a { color: hsl(228, 45%, 44%); }
-
-body {
-    display: flex;
-    justify-content: center; /* по горизонтали */
-    align-items: center;     /* по вертикали */
-    margin: 0; /* убираем отступы по умолчанию */
-    background-image: linear-gradient(to right, #434343 0%, black 100%);
-    font-family: 'Nunito', sans-serif;
-}
-
-.main {
-    background-color: hsl(0, 0%, 12%);
-    text-align: center;
-    padding: 20px;
-    border-radius: 20px;
-    width: 320px;
-    height: auto;
-    margin-top: 7%;
-    margin-bottom: 7%;
-}
-
-
-img {
-    width: 80px;
-    height: 80px;
-    border-radius: 100%;
-    margin-top: 20px;
-}
-
-.links {
-    background-image: linear-gradient(to right, #494949 0%, rgb(44, 44, 44) 100%);
-    border-radius: 10px;
-    padding: 15px;
-    margin: 15px;
-    color: hsl(0, 0%, 8%);
-    transition: background-image 0.9s ease;
-}
-
-.links:hover {
-    background-image: linear-gradient(to right, #5b5b5b 0%, rgb(53, 53, 53) 100%);
-    color: hsl(0, 0%, 8%);
-    font-weight: 500;
-}
-
 a {
     text-decoration: none;
 }
@@ -61,3 +9,45 @@ a {
 #xleb {
     color: hsl(0, 0%, 100%);
 }
+
+    body {
+      background-color: hsl(0, 0%, 8%);
+      font-family: 'Figtree', sans-serif;
+      display: flex;
+      justify-content: center; /* по горизонтали */
+      align-items: center;     /* по вертикали */
+      margin: 0; /* убираем отступы по умолчанию */
+      /* font-family: 'Nunito', sans-serif; */
+    }
+
+    img {
+      width: 80px;
+      height: auto;
+      border-radius: 100%;
+      margin-top: 20px;
+    }
+
+    .main {
+      background-color: hsl(0, 0%, 12%);
+      text-align: center;
+      padding: 20px;
+      border-radius: 20px;
+      width: 320px;
+      height: auto;
+      margin-top: 100px;
+    }
+
+    .links {
+      background-color: hsl(0, 0%, 20%);
+      border-radius: 10px;
+      padding: 15px;
+      margin: 15px;
+      color: hsl(0, 0%, 100%);
+      transition: background-color 0.3s;
+    }
+
+    .links:hover {
+      background-color: hsl(75, 94%, 57%);
+      color: hsl(0, 0%, 8%);
+      font-weight: 500;
+    }
