--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ a {
 }
 
 #develop {
-  color: hsl(0, 0%, 51%)
+  color: hsl(0, 0%, 51%);
 }
 
 #xleb {
@@ -12,9 +12,9 @@ a {
 
 body {
   display: flex;
-  justify-content: center; /* по горизонтали */
-  align-items: center;     /* по вертикали */
-  margin: 0; /* убираем отступы по умолчанию */
+  justify-content: center;
+  align-items: center;
+  margin: 0;
   font-family: 'Nunito', sans-serif;
   
   background-image: linear-gradient(to right, #434343 0%, black 100%);
@@ -25,8 +25,7 @@ img {
   border-radius: 100%;
   margin-top: 20px;
 }
-.main {
-  background-color: hsl(0, 0%, 12%);
+#main_div {
   text-align: center;
   padding: 20px;
   border-radius: 20px;
@@ -42,11 +41,12 @@ img {
   color: hsl(0, 0%, 8%);
   font-weight: 500;
   transition: background-image 0.9s ease;
-}.links:hover {
+}
+/*.links:hover {
   background-image: linear-gradient(to right, #5b5b5b 0%, rgb(53, 53, 53) 100%);
   color: hsl(0, 0%, 8%);
   font-weight: 700;
-}
+} */
 
 #theme {
   width: 40px;
